<resources>
    <string name="app_name">WordleBot</string>
    <string name="begin">Go!</string>
    <string name="delete">Back</string>
    <string name="enter">Go</string>
    <string name="dialog_outcome_won">You won!</string>
    <string name="dialog_outcome_lost">You lost!</string>
    <string name="dialog_btn_dismiss">Dismiss</string>
    <string name="dialog_btn_newgame">New Game</string>
    <string name="dialog_icon_won_contentDiscription">icon of medal</string>
    <string name="dialog_icon_lost_contentDiscription">icon of crying face</string>
    <string name="grid_startHelperActivityIcon">Open Wordle helper\n</string>
    <string name="dialog_header_wordlebot">%d possible solutions</string>
    <string name="logo_contentDescription">App logo</string>
    <string name="arrow_button">Button with right-pointing arrow</string>
    <string name="statistics">Statistics</string>
    <string name="stats_gamesPlayed">Games played</string>
    <string name="stats_gamesWon">Games won</string>
    <string name="stats_gamesLost">Games lost</string>
    <string name="stats_avgGuesses">Average guesses</string>
    <string name="stats_longestStreak">Longest streak</string>
    <string name="stats_currentStreak">Current streak</string>
    <plurals name="stats_games_quantity">
        <item quantity="one">%d</item>
        <item quantity="other">%d</item>
    </plurals>
    <string name="stats_avgGuesses_avg">%.1f</string>
    <string name="winningStreak">Winning Streak</string>
    <plurals name="stats_streak_quantity">
        <item quantity="one">%d games</item>
        <item quantity="other">%d games</item>
    </plurals>

    <string-array name="keyboard_topRow">
        <item>Q</item>
        <item>W</item>
        <item>E</item>
        <item>R</item>
        <item>T</item>
        <item>Y</item>
        <item>U</item>
        <item>I</item>
        <item>O</item>
        <item>P</item>
    </string-array>
    <string-array name="keyboard_middleRow">
        <item>A</item>
        <item>S</item>
        <item>D</item>
        <item>F</item>
        <item>G</item>
        <item>H</item>
        <item>J</item>
        <item>K</item>
        <item>L</item>
    </string-array>
    <string-array name="keyboard_bottomRow">
        <item>Z</item>
        <item>X</item>
        <item>C</item>
        <item>V</item>
        <item>B</item>
        <item>N</item>
        <item>M</item>
    </string-array>

</resources>